--- a/app/assets/stylesheets/student_application_form/form.sass
+++ b/app/assets/stylesheets/student_application_form/form.sass
@@ -116,7 +116,7 @@
 				label
 					width: 80px
 
-			.delete-lang-button, .delete-work-button
+			.delete-lang-button, .delete-work-button, .delete-settings-button
 				vertical-align: middle
 				transition: 0.2s all ease-in
 				position: absolute
@@ -203,7 +203,7 @@
 					width: 100%
 					&:first-child
 						order: 0
-				.delete-lang-button, .delete-work-button
+				.delete-lang-button, .delete-work-button, .delete-settings-button
 					vertical-align: middle
 					align-self: flex-end
 			.work-list
