--- a/app/views/nominee_mailer/user_creation_email.html.erb
+++ b/app/views/nominee_mailer/user_creation_email.html.erb
@@ -516,9 +516,10 @@ background-image: url(https://www.avanzaentucarrera.com/llegaraser/comp/uploads/
         <a style="color: #4664A2;text-decoration: none;" href="<%= @nominee_url %>"><%= @nominee_url %></a>.</h2>
         <br/>
         <br/>
-
+        <% settings = ProjectSettings.first_or_create! %>
         <p class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #18527c;font-size: 12px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
-        Keep in mind that the deadline to receive your application package is <span class="red"><strong>June, 1st</strong></span> for the fall semester or academic year 2019-20, and <span class="red"><strong>December, 1st</strong></span> for the second semester of this current academic year 2018-19. For double degree students, the deadline is <span class="red"><strong>May 15th</strong></span>. Please upload the required documents in PDF and your application package before the deadline.
+        Keep in mind that the deadline to receive application packages is <span class="red"><strong><%= settings.deadline_first_semeter %></strong></span> for the fall
+          semester or academic year <%= settings.next_academic_year %>, and <span class="red"><strong><%= settings.deadline_second_semester %> </strong></span> for the second semester of this current academic year <%= settings.current_academic_year %>. For double degree students, the deadline is <span class="red"><strong><%= settings.deadline_double_degree %> </strong></span>. Please <u>check registered users, documents required in pdf, and application packages before the deadline</u>
 
         </p>
       </div>
