--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -3,17 +3,14 @@
 	<a href="mailto:international@etsit.upm.es" class="inline"><button class="custom-button primary">OI Contact</button></a>
 	<%= button_to "Log out", destroy_user_session_path, :method=> :delete, :class => "custom-button ", :form_class => "inline" %>
 </div>
+<% settings = ProjectSettings.first_or_create! %>
 <% unless current_user.role != 'admin'%>
 	<br/><br/>
 	<p class="no-results">You do not have permission to access this page</p>
 <% else %>
 	<h1 class="title"> Hi, <%= current_user.first_name %></h1>
-
 	<% if current_user.progress_status == "in_process" %>
-
-		<p class="intro-paragraph">We remind you that the deadline to receive your application package is <span class="red"><strong>June, 1st</strong></span> for the fall
-			semester or academic year 2019-20 and <span class="red"><strong>December, 1st</strong></span> for the second semester of this current academic year 2018-19. For double degree students, the deadline is <span class="red"><strong>May 15th</strong></span>. Please <u>complete your application package before the deadline</u> with the required documents in PDF.</p>
-
+		<p class="intro-paragraph">We remind you that the deadline to receive your application package is <span class="red"><strong><%= settings.deadline_first_semeter %> </strong> </span> for the fall semester or academic year <%= settings.next_academic_year %> and <span class="red"><strong><%= settings.deadline_second_semester %> </strong></span> for the second semester of this current academic year <%= settings.current_academic_year %>. For double degree students, the deadline is <span class="red"><strong><%= settings.deadline_double_degree %> </strong></span>. Please <u>complete your application package before the deadline</u> with the required documents in PDF.</p>
 		<p class="intro-paragraph"><span class="red">(*) Required file or data</span> </p>
 		<br/>
 		<div class="dashboard-container">
