--- a/app/assets/stylesheets/dashboard/admin-dashboard.sass
+++ b/app/assets/stylesheets/dashboard/admin-dashboard.sass
@@ -10,7 +10,8 @@
 					width: 100%
 			.custom-button
 				width: 100%
-
+	h1.title
+		margin-top: 10px !important
 @media only screen and (max-width: 1200px)
 	.filters
 		.flex-filters
