--- a/app/views/student_application_form/review_personal_data_step.html.erb
+++ b/app/views/student_application_form/review_personal_data_step.html.erb
@@ -58,7 +58,7 @@
       </div>
     </div>
         <% final_steps_array = user.student_application_form.completed_steps_array  %>
-        <div class="actions">
+        <div class="container actions">
             <div class="progress-bar">
                 <div class="progress-line">
                 </div>
