--- a/app/views/student_application_form/review_student_application_form.html.erb
+++ b/app/views/student_application_form/review_student_application_form.html.erb
@@ -10,7 +10,7 @@
     	<!--<%#= @sap.step.to_s + " / 6"%>-->
         <%end%>
         <% final_steps_array = user.student_application_form.completed_steps_array  %>
-        <div class="actions">
+        <div class="container actions">
             <div class="progress-bar">
                 <div class="progress-line">
                 </div>
