--- a/app/views/user_mailer/reviewed_application_mail.html.erb
+++ b/app/views/user_mailer/reviewed_application_mail.html.erb
@@ -518,37 +518,9 @@
               <br/>
 
               <p class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #18527c;font-size: 12px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
-                We send you additional information:
-              </p>
-              <p class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #18527c;font-size: 12px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
-                List of courses & masters given at ETSIT-UPM
-                <ul>
-                  <li><a href="http://www.etsit.upm.es/de/international-office/studying-at-etsit-upm/course-catalogue/courses-given-in-english-at-etsit-upm-201819.html" target="_blank">
-                    Courses given in English</a></li>
-                  <li><a href="http://www.etsit.upm.es/index.php?id=808&L=0" target="_blank">
-                    Bachelor of Engineering in Telecommunication Technologies and Services (GITST). Spanish</a></li>
-                  <li><a href="http://www.etsit.upm.es/index.php?id=833" target="_blank">
-                    Bachelor in Biomedical Engineering (GIB). Spanish</a></li>
-
-                  <li><a href="http://www.etsit.upm.es/index.php?id=872&L=2" target="_blank">
-                    Masters offered </a></li>
-                  <li><a href="http://www.etsit.upm.es/index.php?id=850" target="_blank">
-                    Master in Telecommunication Engineering (MUIT). English and Spanish</a></li>
-                  <li><a href="http://www.die.upm.es/MISE/" target="_blank">
-                    Máster Universitario en Ingeniería de Sistemas Electrónicos. Spanish</a></li>
-                  <li><a href="http://mstc.ssr.upm.es/" target="_blank">
-                    MSc in Signal Theory and Communications (MSTC). English</a></li>
-                  <li><a href="http://www.ies.upm.es/index.php?id=393" target="_blank">
-                    Master of Science in Photovoltaic Solar Energy. English and Spanish</a></li>
-                  <li><a href="http://docencia.gbt.tfo.upm.es/muib/" target="_blank">
-                    Master in Biomedical Engineering. English</a></li>
-                </ul>
+                For additional information please check <a href="http://www.etsit.upm.es/de/international-office/studying-at-etsit-upm/useful-information.html">our website</a>.
               </p>
 
-              <p class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #18527c;font-size: 12px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
-                Note: Students applying to follow courses from Masters at ETSIT-UPM are expected to have the Master Director’s approval before being accepted.  The international office of ETSIT-UPM will forward the complete application package of the student to the Master department.
-                <span style="color: red;">¡Be aware in selecting courses from the semester you will be at ETSIT only!</span>
-              </p>
             </div>
           </div>
 
