--- a/app/views/users/admin_dashboard.html.erb
+++ b/app/views/users/admin_dashboard.html.erb
@@ -367,6 +367,7 @@
     </div>
     <p class="align-right">
       <button type="button" class="custom-button" id="csv-dialog-select-all-button">Select All</button>
+      <button type="button" class="custom-button hidden" id="csv-dialog-deselect-all-button">Deselect All</button>
       <button type="submit" class="custom-button primary">Download</button>
     </p>
     <!--    <a href="<%#= RELATIVE_URL %>/generate_csv" download="students.csv"><u>Download csv</u></a>-->
