--- a/app/views/users/registration.html.erb
+++ b/app/views/users/registration.html.erb
@@ -67,7 +67,7 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
-  <div class="actions">
+  <div class="container actions">
     <%= f.submit "Sign up", :class => "custom-button primary right" %>
   </div>
 <% end %>
