--- a/app/assets/stylesheets/dashboard/dashboard.sass
+++ b/app/assets/stylesheets/dashboard/dashboard.sass
@@ -137,6 +137,9 @@
 			min-height: 40px
 			.ni_selection
 				padding-left: 10px
+				margin-bottom: 10px
+				p
+					margin-top: 0px
 			.dashboard-section
 				font-size: 18px
 				font-weight: bold
