--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -5,6 +5,7 @@
 
 html
 	height: 100%
+
 	body
 		padding: 0
 		margin: 0
@@ -37,7 +38,7 @@ html
 			&.main
 				background-color: white
 				padding: 30px
-				min-height: calc(100% - 134px)
+				min-height: calc(100% - 160px)
 
 				.student-application-form
 					height: 100%
@@ -110,7 +111,21 @@ html
 				&.main
 					padding: 15px
 
-
+@media (min-width: 768px)
+	html
+		body
+			.container
+				width: 700px
+@media (min-width: 1200px)
+	html
+		body
+			.container
+				width: 1170px
+@media (min-width: 992px)
+	html
+		body
+			.container
+				width: 970px
 /* Useful */
 .red
 	color: #e00
