--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -104,28 +104,28 @@ html
 		.s12
 			font-size: 12px
 
-@media (max-width: 600px)
-	html
-		body
-			.container
-				&.main
-					padding: 15px
-
-@media (min-width: 768px)
-	html
-		body
-			.container
-				width: 700px
-@media (min-width: 1200px)
-	html
-		body
-			.container
-				width: 1170px
-@media (min-width: 992px)
-	html
-		body
-			.container
-				width: 970px
+//@media (max-width: 600px)
+//	html
+//		body
+//			.container
+//				&.main
+//					padding: 15px
+//
+//@media (min-width: 768px)
+//	html
+//		body
+//			.container
+//				width: 700px
+//@media (min-width: 1200px)
+//	html
+//		body
+//			.container
+//				width: 1170px
+//@media (min-width: 992px)
+//	html
+//		body
+//			.container
+//				width: 970px
 /* Useful */
 .red
 	color: #e00
