--- a/app/views/student_application_form/personal_data_step.html.erb
+++ b/app/views/student_application_form/personal_data_step.html.erb
@@ -63,7 +63,7 @@
       <%= f.email_field :email, value: @user.email, autofocus: true, autocomplete: "email", disabled: true, class: "width100"  %>
     </div>
     </div>
-   <div class="action-buttons">
+   <div class="container actions">
     <div class="progress-bar">
         <div class="progress-line">
         </div>
