Download zip for user. Several fixes

--- a/app/assets/stylesheets/dashboard/dashboard.sass
+++ b/app/assets/stylesheets/dashboard/dashboard.sass
@@ -57,6 +57,10 @@
 				vertical-align: middle
 				&.hidden
 					display: none
+.footer-paragraph
+	text-align: right
+	.registered_at
+		line-height: 34px
 #several-nominee-dialog
 	padding: 25px
 	display: none
@@ -212,6 +216,9 @@
 					height: 38px
 			.student-application-form-progress
 				font-weight: bold
+			.progress-icon
+				float: none !important
+				cursor: help
 			.check_mark
 				float: right
 				margin-top: -25px
