--- a/app/views/student_application_form/_third_step.erb
+++ b/app/views/student_application_form/_third_step.erb
@@ -5,7 +5,7 @@
 <!--<p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>-->
 <div class="edit_student_application_flex purpose_stay" style="display:block">
 <%purposes = sap.purpose_of_stay.blank? ? [] : JSON.parse(sap.purpose_of_stay)%>
-<input id="undergraduate_courses" name="student_application_form[purpose_of_stay][][" size="30" type="checkbox" value="undergraduate_courses" <%= review ? "disabled":"" %>
+<input id="undergraduate_courses" name="student_application_form[purpose_of_stay][]" size="30" type="checkbox" value="undergraduate_courses" <%= review ? "disabled":"" %>
   <%=purposes.include?("undergraduate_courses") ? "checked":"" %> />
 <%= f.label "purpose_of_stay", "Undergraduate courses" %><br/>
 <input id="master_courses" name="student_application_form[purpose_of_stay][]" size="30" type="checkbox" value="master_courses" <%= review ? "disabled":"" %>
