Interface Language Certificates

--- a/app/assets/stylesheets/student_application_form/form.sass
+++ b/app/assets/stylesheets/student_application_form/form.sass
@@ -2,7 +2,10 @@
 @import "../mixins"
 .finish_app
 	margin: 0 0 20px 0
-	float: right
+	//float: right
+	text-align: right
+	form
+		text-align: right
 .student-application-form, .edit_user
 
 	h1
