--- a/app/views/users/_user_dashboard_panel.html.erb
+++ b/app/views/users/_user_dashboard_panel.html.erb
@@ -1,7 +1,9 @@
 <div class="row">
 	<span class="dashboard-section" id="motivation-letter-tab">
-		<%unless admin === true  %>
-			<span class="red">*</span>
+		<%unless admin === true or (!current_user.seeking_degree and name === :english_test_score ) or name === :spanish_test_score %>
+				<span class="red">*</span>
+		<%else %>
+				<span class="red">&nbsp; </span>
 		<%end%>
 		<label for=<%=name%>>
 			<%=label%><i class="caret mdi mdi-menu-down no-reverse"></i>
