--- a/app/assets/stylesheets/buttons.sass
+++ b/app/assets/stylesheets/buttons.sass
@@ -14,6 +14,7 @@
     margin: 2px
     transition: 0.2s all ease-in
     max-height: 40px
+    height: 40px
     &:disabled
         color: #9fa8b0
         border-color: #9fa8b0
