--- a/app/views/users/review_dashboard.html.erb
+++ b/app/views/users/review_dashboard.html.erb
@@ -137,8 +137,8 @@
 			<%= render partial: "users/user_dashboard_panel", :locals => {
 					:admin => true,
 					:name => :spanish_test_score,
-					:content => current_user.english_test_score,
-					:file_name => current_user.english_test_score_file_name,
+					:content => current_user.spanish_test_score,
+					:file_name => current_user.spanish_test_score_file_name,
 					:label => "Spanish Language Certificate"}  %>
 			<%if current_user.seeking_degree %>
 				<div id="degree-seeking" class="<%= current_user.seeking_degree ? "" : "hidden" %>">
