Minor style fixes

--- a/app/views/users/review_dashboard.html.erb
+++ b/app/views/users/review_dashboard.html.erb
@@ -41,6 +41,7 @@
 			<div class="row">
 				<div class="second-container">
 				<span class="second-container-left dashboard-section" id="application-form-tab">
+					<span class="red">&nbsp; </span>
 					<label>
 						Application Form<i class="caret mdi mdi-menu-down reverse"></i>
 					</label>
